Integration small changes and Test Ready

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,7 @@
 {% load static %}
 
 {% block content %}
-    <h1 class="teste"> Olá Maltinha </h1>
+    <h1 class="teste"> Digital Consulting - Grupo XX </h1>
+    <h2>Testes:</h2>
+    <a href="http://127.0.0.1:8000/solutions/TesteADS/2/">Webservice da consultora</a>
 {% endblock content %}
