--- a/templates/index.html
+++ b/templates/index.html
@@ -4,5 +4,7 @@
 {% block content %}
     <h1 class="teste"> Digital Consulting - Grupo XX </h1>
     <h2>Testes:</h2>
-    <a href="http://127.0.0.1:8000/solutions/TesteADS/2/">Webservice da consultora</a>
+    <a href="http://127.0.0.1:8000/solutions/TesteADS/2/false">Webservice da consultora (Qualidade das Soluções - Antes do Pagamento)</a>
+    <br>
+    <a href="http://127.0.0.1:8000/solutions/TesteADS/2/true">Webservice da consultora (Soluções - Depois do Pagamento)</a>
 {% endblock content %}
