--- a/DigitalPlatform/static/DigitalPlatform/style.css
+++ b/DigitalPlatform/static/DigitalPlatform/style.css
@@ -1,5 +1,75 @@
-.teste {
-    color: black;
-    text-align: center;
-    font-size: 40px;
+#sidebar-wrapper {
+    background-color: #33303E;
+    color: white;
+    position: fixed;
+    height: 100%;
+    width: 20%;
+    z-index: 1;
+}
+
+.sidebar-nav {
+    position: fixed;
+    top: 0;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    width: 20%;
+}
+
+.sidebar-nav li {
+    font-size: 20px;
+    text-indent: 55px;
+    line-height: 80px;
+}
+
+.sidebar-nav li a {
+    color: white;
+    display: block;
+    text-decoration: none;
+}
+
+.sidebar-nav li a:hover {
+    background: #448B93;
+    color: white;
+    text-decoration: none;
+}
+
+.sidebar-nav li a:active, .sidebar-nav li a:focus {
+    text-decoration: none;
+}
+
+#logo {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+#sidebar-wrapper.sidebar-toggle {
+    transition: all 0.3s ease-out;
+}
+
+#main {
+    padding-left: 70px;
+
+}
+
+@media (min-width: 768px) {
+    #sidebar-wrapper.sidebar-toggle {
+        transition: 0s;
+    }
+}
+
+main {
+    background-color: #E1E0E7;
+    width: 80%;
+    margin-left: 20%;
+    height: 100%;
+    position: fixed;
+}
+
+
+.table {
+    border-collapse: collapse;
+    margin: 25px;
+    border-radius: 12px 12px;
+
 }
