--- a/templates/results.html
+++ b/templates/results.html
@@ -2,6 +2,52 @@
 {% load static %}
 
 {% block content %}
+
+    <main>
+        <div class="row">
+            <div class="col-2">
+                <table class="table table-hover">
+                    <thead class="thead-dark">
+                    <tr>
+                        <th>Problem</th>
+                    </tr>
+
+                    </thead>
+                    <tbody>
+                    {% for quality in qualities %}
+                        <tr>
+                            <th>{{ quality.problem }}</th>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+
+
+                </table>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-5">
+                <br>
+
+                <form action="{% url 'show_purchase' %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-primary btn-lg">Buy</button>
+                    <button type="submit" class="btn btn-primary btn-lg">Cancel</button>
+                    <button type="submit" class="btn btn-primary btn-lg">Check again</button>
+                </form>
+
+                {% for quality in qualities %}
+                    <h1>{{ quality.problem }}</h1>
+
+                    {% for quality in quality.solutions_quality %}
+                        <h2>{{ quality }}</h2>
+                    {% endfor %}
+                {% endfor %}
+            </div>
+        </div>
+
+
+    </main>
     {% for quality in qualities %}
         <h1>{{ quality.problem }}</h1>
 
