--- a/templates/default_page.html
+++ b/templates/default_page.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="{% static 'DigitalPlatform/style.css' %}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://code.jquery.com/jquery-3..4.1.js"></script>
 
     <title>Digital Consulting - Group XX</title>
 </head>
@@ -26,10 +28,10 @@
                                      src="{% static 'DigitalPlatform/images/logo.png' %}"/></a>
                 </div>
                 <li>
-                    <a href="#item1">Soluções Geradas</a>
+                    <a href="#item1">Página Inicial</a>
                 </li>
                 <li>
-                    <a href="#item2">Exemplo</a>
+                    <a href="#item2">Soluções Geradas</a>
                 </li>
                 <li>
                     <a href="#item3">Exemplo</a>
