--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,8 @@
 {% load static %}
 
 {% block content %}
+<!-- Tabela que recebe as soluções adicionadas -->
+
     <main>
         <div class="row">
             <div class="col-8">
@@ -27,53 +29,68 @@
                 </table>
                 <br>
 
-                <form action="{% url 'show_results' %}" method="post">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-primary btn-lg btn-block">Gerar Soluções</button>
-                </form>
-            </div>
+                    <form action="{% url 'show_results' %}" method="post">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-primary btn-lg btn-block">Gerar Soluções</button>
+                    </form>
 
+            </div>
+<!-- Formulário para adicionar problemas-->
             <div class="col-4">
                 <div class="jumbotron">
+
                     <form action="{% url 'index' %}" method="post">
                         {% csrf_token %}
                         <div class="form-group">
-                            <label for="nome">Nome</label>
-                            <input type="text" class="form-control" name="nome" placeholder="Problema">
+                            <label for="nome">Name</label>
+                            <input type="text" class="form-control" name="nome" placeholder="Problem">
                         </div>
                         <div class="form-group">
-                            <label for="tipo">Tipo</label>
-                            <select class="form-control" name="tipo">
-                                <option>Escolha uma opção</option>
+                            <label for="tipo">Type</label>
+                            <select class="form-control" name="type">
+                                <option>Choose an option</option>
                                 <option>Integer</option>
                                 <option>Boolean</option>
                                 <option>Double</option>
                             </select>
                         </div>
                         <div class="form-group">
-                            <label for="variaveis">Váriaveis</label>
+                            <label for="variaveis">Variables</label>
                             <textarea class="form-control" id="variaveis" name="variables" rows="3"></textarea>
+                        </div><br>
+
+                        <div class="alerta">
+                            <span class="msg">*Webservice pode apenas operações- adição e subtração</span>
                         </div>
+
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="webService" id="webService"
-                                   value="opcao1" checked>
+                                   value="opcao1">
                             <label class="form-check-label" for="webService">
                                 Webservice
                             </label>
+                            <input type="text" name="webServiceTxt" class="form-control" aria-label="Small">
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="Jarfile" id="Jarfile" value="opcao2">
                             <label class="form-check-label" for="Jarfile">
                                 Jarfile
                             </label>
-                        </div>
+                        </div><br>
                         <div class="form-group">
-                            <label for="upload_Arquivo">Upload</label>
                             <input type="file" class="form-control-file" id="upload_Arquivo" name="file">
-                        </div>
+                        </div><br>
+                        <div class="form-group">
+                            <label for="size">Is Better?</label>
+                            <select class="form-control" name="type">
+                                <option>Choose an option</option>
+                                <option>Big</option>
+                                <option>Small</option>
+                            </select>
+                        </div><br>
 
-                        <button type="submit" onclick="addProblem()" class="btn btn-primary">Adicionar Problema</button>
-                        <button type="submit" class="btn btn-outline-danger">Cancelar</button>
+                        <button type="submit" onclick="addProblem()" class="btn btn-primary">Submit Problem</button>
+                        <button type="submit" class="btn btn-outline-danger">Cancel</button>
                     </form>
                 </div>
             </div>
