--- a/templates/results.html
+++ b/templates/results.html
@@ -2,39 +2,38 @@
 {% load static %}
 
 {% block content %}
-
     <main>
         <div class="row">
             <div class="col-7">
                 <div class="table-responsive">
-                    <table class="table table-hover ">
-                        <thead class="thead-dark">
-                        <tr>
-                            <th>Problem</th>
-                            <th>Quality</th>
-                        </tr>
-
-                        </thead>
-                        <tbody>
-                        {% for quality in qualities %}
+                    <div id="table-scroll">
+                        <table class="table table-hover ">
+                            <thead class="thead-dark">
                             <tr>
-                                <th>
-                                    {{ quality.problem }}
-                                </th>
-
-                                {% for quality in quality.solutions_quality %}
-
-                                    <th>
-                                        {{ quality }}
-                                    </th>
-                                {% endfor %}
-
+                                <th>Problema</th>
+                                <th>Qualidade</th>
                             </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
+                            </thead>
 
+                            <tbody>
+                            {% for quality in qualities %}
+                                <tr>
+                                    <th>
+                                        {{ quality.problem }}
+                                    </th>
+
+                                    {% for quality in quality.solutions_quality %}
+
+                                        <th>
+                                            {{ quality }}
+                                        </th>
+                                    {% endfor %}
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -42,28 +41,23 @@
 
         <div class="row">
             <div class="col-2">
-
-
                 <form action="{% url 'show_purchase' %}" method="post">
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-primary btn-lg">Buy</button>
+                    <button type="submit" class="btn btn-primary btn-lg">Comprar</button>
                 </form>
             </div>
             <div class="col-2">
                 <form action="{% url 'index' %}" method="get">
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-primary btn-lg">Cancel</button>
+                    <button type="submit" class="btn btn-primary btn-lg">Cancelar</button>
                 </form>
             </div>
             <div class="col-2">
                 <form action="{% url 'show_results' %}" method="post">
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-primary btn-lg">Check again</button>
+                    <button type="submit" class="btn btn-primary btn-lg">Gerar Novamente</button>
                 </form>
             </div>
         </div>
-
     </main>
-
-
 {% endblock content %}
