--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<!-- Tabela que recebe as soluções adicionadas -->
+    <!-- Tabela que recebe as soluções adicionadas -->
 
     <main>
         <div class="row">
@@ -29,68 +29,76 @@
                 </table>
                 <br>
 
-                    <form action="{% url 'show_results' %}" method="post">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-primary btn-lg btn-block">Gerar Soluções</button>
-                    </form>
+                <form action="{% url 'show_results' %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-primary btn-lg btn-block">Gerar Soluções</button>
+                </form>
 
             </div>
-<!-- Formulário para adicionar problemas-->
+            <!-- Formulário para adicionar problemas-->
             <div class="col-4">
                 <div class="jumbotron">
 
                     <form action="{% url 'index' %}" method="post">
                         {% csrf_token %}
                         <div class="form-group">
-                            <label for="nome">Name</label>
-                            <input type="text" class="form-control" name="nome" placeholder="Problem">
+                            <label for="nome">Nome</label>
+                            <input type="text" class="form-control" name="nome" placeholder="Problema">
                         </div>
                         <div class="form-group">
-                            <label for="tipo">Type</label>
+                            <label for="objetives">Nº De Objectivos</label>
+                            <input type="number" class="form-control" name="objectives" placeholder="Nº De Objectivos">
+                        </div>
+                        <div class="form-group">
+                            <label for="tipo">Tipo</label>
                             <select class="form-control" name="type">
-                                <option>Choose an option</option>
+                                <option>Escolha uma opção</option>
                                 <option>Integer</option>
                                 <option>Boolean</option>
                                 <option>Double</option>
                             </select>
                         </div>
                         <div class="form-group">
-                            <label for="variaveis">Variables</label>
+                            <label for="variaveis">Variáveis</label>
                             <textarea class="form-control" id="variaveis" name="variables" rows="3"></textarea>
-                        </div><br>
+                        </div>
+                        <br>
 
                         <div class="alerta">
-                            <span class="msg">*Webservice pode apenas operações- adição e subtração</span>
+                            <span class="msg">*Webservice pode apenas realizar operações de adição, subtração e multiplicação </span>
                         </div>
 
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="webService" id="webService"
-                                   value="opcao1">
+                            <input class="form-check-input" type="radio" name="method" id="webService"
+                                   value="webservice">
                             <label class="form-check-label" for="webService">
                                 Webservice
                             </label>
                             <input type="text" name="webServiceTxt" class="form-control" aria-label="Small">
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="Jarfile" id="Jarfile" value="opcao2">
+                            <input class="form-check-input" type="radio" name="method" id="Jarfile" value="jarfile">
                             <label class="form-check-label" for="Jarfile">
                                 Jarfile
                             </label>
-                        </div><br>
+                        </div>
+                        <br>
                         <div class="form-group">
                             <input type="file" class="form-control-file" id="upload_Arquivo" name="file">
-                        </div><br>
+                        </div>
+                        <br>
                         <div class="form-group">
-                            <label for="size">Is Better?</label>
-                            <select class="form-control" name="type">
-                                <option>Choose an option</option>
-                                <option>Big</option>
-                                <option>Small</option>
+                            <label for="size">Que resultado é melhor?</label>
+                            <select class="form-control" name="size">
+                                <option>Escolha uma opção</option>
+                                <option>Maior</option>
+                                <option>Menor</option>
                             </select>
-                        </div><br>
+                        </div>
+                        <br>
 
-                        <button type="submit" onclick="addProblem()" class="btn btn-primary">Submit Problem</button>
-                        <button type="submit" class="btn btn-outline-danger">Cancel</button>
+                        <button type="submit" class="btn btn-primary">Submeter Problema</button>
+                        <button type="submit" class="btn btn-outline-danger">Cancelar</button>
                     </form>
                 </div>
             </div>
